--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "node-telegram-bot-api": "^0.27.1"
+    "bluebird": "^3.5.0",
+    "node-telegram-bot-api": "^0.27.1",
+    "request-promise": "^4.2.2"
   }
 }
