--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "node-telegram-bot-api": "^0.27.1",
+    "chart.js": "^2.7.2",
+    "chartjs-node": "^1.7.1",
+    "node-telegram-bot-api": "^0.30.0",
     "request-promise": "^4.2.2"
   }
 }
